# agentzero-cli

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  REPORT.md  SECURITY.md  TODO.md  VibeSummary.md  VibingDairy_opensource_release.md  a0  a0cli  a0tui  backend.py  cli.py  config.example.yaml  config.yaml  install.py  main.py  main_new.py  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agentzero_cli/: __init__.py  backend.py  cli_entry.py  logging_config.py  main.py
agentzero_cli/cli/: __init__.py  app.py  commands.py
agentzero_cli/llm_providers/: agentzero.py  local.py  localllm.py  openrouter.py
agentzero_cli/observer/: router.py  rules.py
agentzero_cli/tools/: __init__.py  executor.py
agentzero_cli/ui/: __init__.py  app.py  insights.py
agentzero_cli/ui/chat/: message_widgets.py  session.py
agentzero_cli/ui/commands/: slash_commands.py
agentzero_cli/ui/screens/: file_upload.py  tool_approval.py
agentzero_cli/ui/widgets/: hierarchical_menu.py  thinking_indicator.py
assets/: demo.cast  demo_backends.cast  demo_codegen.cast  demo_model_switch.cast  demo_risk.cast  demo_security.cast
cli/: app.py  approval.py  commands.py  input.py  news.py  renderer.py  setup_wizard.py
docs/: COMMUNITY.md  CONFIGURATION.md  FUTURE.md  ISSUES.md  NEXT_STEPS_SPEC.md  OBSERVER.md  OPERATOR_GUIDE.md  PUBLISHING.md  ProjectSummary.md  README.md  SECURITY.md  SPEC.md  USAGE.md  VibingDairy_create_agents_md.md  VibingDairy_fix_lint.md  VibingDairy_fix_observer_docs.md  VibingDairy_opencode_mcp_config.md  VibingDairy_project_summary_memory.md  VibingDairy_targeted_improvements.md
feed.theones.io/: DEPLOY.md  cron.sh  index.html  nginx.conf
feed.theones.io/collector/: collect.py
llm_providers/: __init__.py  agentzero.py  base.py  local.py  localllm.py  mcp_gateway.py  openrouter.py
observer/: __init__.py  router.py
scripts/: cleanup_uploads.sh  completion.sh  install.sh  record_demo.sh  rotate_api_key.sh  run_e2e.sh
specs/: feasibility_analysis.md  file_broker_hitl_spec.md
tests/: test_backend_context.py  test_cli_commands.py  test_e2e.py  test_executor.py  test_localllm.py  test_openrouter.py  test_tool_rejection.py
ui/: app.py  css.py  themes.py
ui/chat/: __init__.py  multiline_input.py  tab_manager.py  thinking_stream.py
ui/commands/: __init__.py  slash_commands.py
ui/screens/: __init__.py  observer_config.py  space_invaders.py
ui/widgets/: __init__.py  arcade.py
